<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/icon_home"
            android:title="@string/home" />
    </group>

    <group
        android:id="@+id/profile"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />

    </group>


    <item android:title="@string/product_information">
        <menu>
            <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_sale"
                android:icon="@drawable/ic_add_to_photos_black_24dp"
                android:title="@string/marketing_sale" />
            <item
                android:id="@+id/nav_product_information_agent"
                android:icon="@drawable/ic_error_black_24dp"
                android:title="@string/product_information" />
                <item
                    android:id="@+id/nav_product_standard"
                    android:icon="@drawable/ic_description_black_24dp"
                    android:title="@string/product_standard" />
            </group>

            <item
            android:id="@+id/nav_preorder_bid"
            android:icon="@drawable/ic_soldbyagent"
            android:title="@string/preorder" />

            <item
                android:id="@+id/nav_add_preorder_bid"
                android:icon="@drawable/ic_soldbyagent"
                android:title="@string/addpreorder" />

        </menu>
    </item>
    <item android:title="@string/sale">
        <menu>
            <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_sale_bids_agent"
                android:icon="@drawable/icon_sell"
                android:title="@string/bids" />
            <item
                android:id="@+id/nav_sold_product_agent"
                android:icon="@drawable/icon_buy"
                android:title="@string/sold_product" />
            </group>

        </menu>
    </item>

    <item android:title="@string/purchase">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_preorder_bids"
                    android:icon="@drawable/icon_sell"
                    android:title="@string/preorderbids" />
                <item
                    android:id="@+id/nav_purchase_bids_agent"
                    android:icon="@drawable/icon_sell"
                    android:title="@string/bids" />
                <item
                    android:id="@+id/nav_purchase_product_agent"
                    android:icon="@drawable/icon_buy"
                    android:title="@string/purchased_product" />
            </group>
        </menu>
    </item>
    <item android:title="@string/agent_dash_board">
        <menu>

            <group android:checkableBehavior="single" >
                <item
                    android:id="@+id/sme_list_agent"
                    android:icon="@drawable/ic_list"
                    android:title="@string/sme_list" />
                <item
                    android:id="@+id/installment"
                    android:icon="@drawable/installment"
                    android:title="@string/installment" />
<!--                <item-->
<!--                    android:id="@+id/shipment"-->

<!--                    android:icon="@drawable/ic_ship"-->
<!--                    android:title="@string/sme_shipment" />-->
                <item
                    android:id="@+id/trade_list"

                    android:icon="@drawable/ic_list"
                    android:title="@string/trad_list" />
                <item
                    android:id="@+id/receiveable_list"

                    android:icon="@drawable/ic_receiveable"
                    android:title="@string/receiveable_list" />
                <item
                    android:id="@+id/deliverable_list"

                    android:icon="@drawable/ic_deliverable"
                    android:title="@string/deliverable_list" />
                <item
                    android:id="@+id/comission_list"

                    android:icon="@drawable/ic_comission"
                    android:title="@string/comission_list" />
                <item
                    android:id="@+id/sold_product_list"

                    android:icon="@drawable/ic_sold"
                    android:title="@string/sold_list_byagent" />
                <item
                    android:id="@+id/buy_product_list"

                    android:icon="@drawable/ic_soldbyagent"
                    android:title="@string/buy_list_byagent" />
            </group>
        </menu>
    </item>
    <group
        android:id="@+id/logout"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>

</menu>
