<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp">


        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="110dp"
                        style="@style/label"
                        android:layout_height="wrap_content"
                        android:text="@string/product_name"/>
                    <TextView
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="dflkfdlkfdlk"
                        android:textColor="@color/shadow_color"
                        android:textSize="@dimen/album_title"
                        android:textStyle="bold"/>
                </LinearLayout>
                <View style="@style/Divider"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone">
                    <TextView
                        android:layout_width="110dp"
                        style="@style/label"
                        android:layout_height="wrap_content"
                        android:text="@string/buyer_name"/>
                    <TextView
                        android:id="@+id/buyer_name_per"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="dflkfdlkfdlk"
                        android:textColor="@color/shadow_color"
                        android:textSize="@dimen/album_title"
                        android:textStyle="bold"/>
                </LinearLayout>
                <View style="@style/Divider"/>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone">
                    <TextView
                        android:layout_width="110dp"
                        style="@style/label"
                        android:layout_height="wrap_content"
                        android:text="@string/bid_time"/>
                    <TextView
                        android:id="@+id/bid_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="dflkfdlkfdlk"
                        android:textColor="@color/shadow_color"
                        android:textSize="@dimen/album_title"
                        android:textStyle="bold"/>
                </LinearLayout>
                <View style="@style/Divider"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="110dp"
                        style="@style/label"
                        android:layout_height="wrap_content"
                        android:text="@string/seller_name"/>
                    <TextView
                        android:id="@+id/seller_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="dflkfdlkfdlk"
                        android:textColor="@color/shadow_color"
                        android:textSize="@dimen/album_title"
                        android:textStyle="bold"/>
                </LinearLayout>
                <View style="@style/Divider"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="110dp"
                        style="@style/label"
                        android:layout_height="wrap_content"
                        android:text="@string/asking_price"/>
                    <TextView
                        android:id="@+id/asking_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="dflkfdlkfdlk"
                        android:textColor="@color/shadow_color"
                        android:textSize="@dimen/album_title"
                        android:textStyle="bold"/>
                </LinearLayout>
                <View style="@style/Divider"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="110dp"
                        style="@style/label"
                        android:layout_height="wrap_content"
                        android:text="@string/sold_price"/>
                    <TextView
                        android:id="@+id/sold_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="dflkfdlkfdlk"
                        android:textColor="@color/shadow_color"
                        android:textSize="@dimen/album_title"
                        android:textStyle="bold"/>
                </LinearLayout>
                <View style="@style/Divider"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone">
                    <TextView
                        android:layout_width="110dp"
                        style="@style/label"
                        android:layout_height="wrap_content"
                        android:text="@string/selling_time"/>
                    <TextView
                        android:id="@+id/sell_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="dflkfdlkfdlk"
                        android:textColor="@color/shadow_color"
                        android:textSize="@dimen/album_title"
                        android:textStyle="bold"/>
                </LinearLayout>
                <View style="@style/Divider"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="110dp"
                        style="@style/label"
                        android:layout_height="wrap_content"
                        android:text="@string/quantity"/>
                    <TextView
                        android:id="@+id/quantity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="dflkfdlkfdlk"
                        android:textColor="@color/shadow_color"
                        android:textSize="@dimen/album_title"
                        android:textStyle="bold"/>
                </LinearLayout>
                <View style="@style/Divider"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone">
                    <TextView
                        android:layout_width="110dp"
                        style="@style/label"
                        android:layout_height="wrap_content"
                        android:text="@string/vat"/>
                    <TextView
                        android:id="@+id/vat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="dflkfdlkfdlk"
                        android:textColor="@color/shadow_color"
                        android:textSize="@dimen/album_title"
                        android:textStyle="bold"/>
                </LinearLayout>
                <View style="@style/Divider"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone">
                    <TextView
                        android:layout_width="110dp"
                        style="@style/label"
                        android:layout_height="wrap_content"
                        android:text="@string/service_charge"/>
                    <TextView
                        android:id="@+id/service_charge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="dflkfdlkfdlk"
                        android:textColor="@color/shadow_color"
                        android:textSize="@dimen/album_title"
                        android:textStyle="bold"/>
                </LinearLayout>
                <View style="@style/Divider"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone">
                    <TextView
                        android:layout_width="110dp"
                        style="@style/label"
                        android:layout_height="wrap_content"
                        android:text="@string/shipping_cost"/>
                    <TextView
                        android:id="@+id/shipping_cost"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="dflkfdlkfdlk"
                        android:textColor="@color/shadow_color"
                        android:textSize="@dimen/album_title"
                        android:textStyle="bold"/>
                </LinearLayout>
                <View style="@style/Divider"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="110dp"
                        style="@style/label"
                        android:layout_height="wrap_content"
                        android:text="@string/total"/>
                    <TextView
                        android:id="@+id/total"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="dflkfdlkfdlk"
                        android:textColor="@color/shadow_color"
                        android:textSize="@dimen/album_title"
                        android:textStyle="bold"/>
                </LinearLayout>
                <View style="@style/Divider"/>




            </LinearLayout>
        </ScrollView>



</LinearLayout>